--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/material_dynamic_primary99"
-    tools:context=".MainActivity">
+    tools:context=".WelcomeActivity">
 
     <ImageView
         android:id="@+id/logo"
