--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+<!--    <color name="color_background_box">#F5F5F5</color>-->
+<!--    <color name="color_background_box_stroke">#DEDEDE</color>-->
+<!--    <color name="color_background_box_stroke_active">#A5A5A5</color>-->
 </resources>
