--- a/app/src/main/res/layout/activity_no_network.xml
+++ b/app/src/main/res/layout/activity_no_network.xml
@@ -17,7 +17,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.277"
         app:srcCompat="@drawable/ic_no_network"
-        app:tint="@color/material_dynamic_primary60" />
+        app:tint="@color/material_dynamic_primary60"
+        android:contentDescription="@string/logo" />
 
     <TextView
         android:id="@+id/no_in"
@@ -54,5 +55,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent=".8" />
+        app:layout_constraintWidth_percent=".8"
+        tools:ignore="TextContrastCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
