--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,10 @@
     <style name="ThemeOverlay.AppTheme.TextInputLayout.Outlined" parent="">
         <item name="colorControlActivated">@color/material_dynamic_primary60</item>
     </style>
+    <style name="roundedImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">38%</item>
+    </style>
 
     <style name="Theme.ReflectR" parent="Base.Theme.ReflectR" />
 </resources>
